background img refused to render

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body  {
-	background: url("/Users/auntbenny/Documents/CODING/Hangman-Game/assets/images/watercolor_world.jpg") top center no-repeat;
+	background: url("https://s-media-cache-ak0.pinimg.com/originals/14/c6/28/14c628fe0c3e119feb376a14d11060aa.png") top center no-repeat;
 	text-align: center;
 	margin: 20px 60px;
 	padding: 10px 20px;
