background only temp worked?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body  {
-	background: url('assets/images/watercolor_world.JPG') top center no-repeat;
+	background: url('https://az616578.vo.msecnd.net/files/responsive/cover/main/desktop/2016/04/22/635968870360454193-2018832578_6441-c8b9902ef92841c397e9f649cc99e4db.PNG') top center no-repeat;
 	text-align: center;
 	margin: 20px 60px;
 	padding: 10px 20px;
