--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,14 @@
 	box-sizing: border-box;
 }
 
+#background {
+    height: 100%; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 body  {
-	background: url('assets/images/watercolor_world.jpg') top center no-repeat;
 	text-align: center;
 	margin: 20px 60px;
 	padding: 10px 20px;
