--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ section {
 	vertical-align: middle;
 }
 
-#listed {
+#active-word {
     display: inline-block;
     list-style: none;
     border-bottom: 1px solid black;
